tests/paczka1/small_fuzzy/40875647.err
Error in line 1: vuYpexc72uk S762 18,9
Error in line 4: xzEVH5e A178 97,3
